# py-to-diffsl

./: .gitignore  README.md  diffsl.py  gen_diffsl.py  main.py  pyproject.toml  test_diffsl.py  test_gen_diffsl.py
.github/workflows/: tests.yml
src/diffsl/: diffsl.py
tests/: test_diffsl.py  test_pydiffsol_examples.py
