[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "py-to-diffsl"
version = "0.1.0"
description = "Trace Python ODE systems into DiffSL code"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Alex Allmont" },
]
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
]
examples = [
    "matplotlib",
    "numpy",
    "pydiffsol",
]

[project.urls]
Repository = "https://github.com/alexallmont/py-to-diffsl"

[tool.setuptools]
package-dir = { "" = "src/diffsl" }
py-modules = ["diffsl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/diffsl"]
